stay connected section added the content

--- a/index.html
+++ b/index.html
@@ -220,10 +220,42 @@
   </div>
 </div>
 <!-- penn priorities section -->
-<div class="bg-[#002855] py-16 text-center text-white relative">  <div class="absolute inset-0 w-full h-full bg-[#002855]"></div>  <div class="relative z-10 container mx-auto">
-  <h3 class="text-5xl font-bold mb-7">Penn Priorities</h3>
-  <p class="text-2xl leading-relaxed">A look at a few of our big picture priorities that improve Penn as we create knowledge to benefit the world.</p>
+<div class="bg-blue-950 py-16 text-center text-white relative">  <div class="absolute inset-0 w-full h-full bg-blue-950"></div>  <div class="relative z-10 container mx-auto">
+  <h3 class="text-2xl font-bold mb-7">Penn Priorities</h3>
+  <p class="text-sm leading-relaxed">A look at a few of our big picture priorities that improve Penn as we create knowledge to benefit the world.</p>
 </div>
+</div>
+<!-- stay connected -->
+<div class="container mx-auto py-16">
+  <h3 class="text-4xl text-blue-950 text-center mb-8">Stay Connected</h3>
+  <div class="flex gap-8">
+
+      <div class="w-1/3">  <img src="src/images/art-matters-fantine-sq.png" alt="Dog Image" class="w-full h-auto">
+      </div>
+
+      <div class="w-1/3 bg-blue-950 text-white p-6 relative">
+        <p class="text-lg">Scott Hensley of Penn Medicine says, "The worst thing we can do is be flat-footed and unprepared, because this virus does represent a true pandemic risk." Faculty members from @PennMedicine and @PennVetSchool are working on a new vaccine for the H5N1 virus. They are studying how the virus is transmitted and assisting the state in testing samples from birds and mammals.</p>
+        <div class="absolute bottom-4 left-4 flex items-center">
+            <div class="bg-white rounded-full w-8 h-8 flex items-center justify-center mr-2">
+                <img src="src/images/icon-x.svg" alt="X Icon" class="w-4 h-4"> </div>
+            <span class="text-white">@PENN</span>
+        </div>
+    </div>
+
+      <div class="w-1/3">  <img src="src/images/penn_commonsspringsem2025-sq.png" alt="Building Image" class="w-full h-auto">
+      </div>
+
+  </div>
+
+  <div class="flex justify-center mt-8 space-x-4">
+      <a href="#"><img src="src/images/icon-instagram.svg" alt="Icon 1" class="h-8 w-8"></a>
+      <a href="#"><img src="src/images/icon-facebook.svg" alt="Icon 2" class="h-8 w-8"></a>
+      <a href="#"><img src="src/images/icon-twitter.svg" alt="Icon 3" class="h-8 w-8"></a>
+      <a href="#"><img src="src/images/icon-flickr.svg" alt="Icon 4" class="h-8 w-8"></a>
+      <a href="#"><img src="src/images/icon-youtube.svg" alt="Icon 5" class="h-8 w-8"></a>
+      <a href="#"><img src="src/images/icon-linkedin.svg" alt="Icon 6" class="h-8 w-8"></a>
+  </div>
+
 </div>
 </body>
 </html>
