non-discrimination section

--- a/index.html
+++ b/index.html
@@ -272,5 +272,57 @@
       </div>
   </div>
 </div>
+<!-- Footer -->
+<footer class="relative py-16">
+  <div class="absolute inset-0 w-full h-full">
+      <img src="src/images/footer-16.png" alt="Footer Background" class="w-full h-full object-cover">
+      <div class="absolute inset-0 w-full h-full bg-[#002855]/70"></div> </div>
+
+  <div class="relative z-10 container mx-auto text-white">
+      <div class="flex justify-between items-start mb-8">  <div>
+              <img src="src/images/UPenn-logo.svg" alt="Penn Logo" class="h-16">
+              <div class="mt-4">
+                  <p>Philadelphia, PA 19104</p>
+                  <p>Telephone: (215) 898-5000</p>
+              </div>
+              <div class="mt-6 flex space-x-4">
+                  <a href="#">CONTACT US</a>
+                  <a href="#">MAPS</a>
+                  <a href="#">PARKING</a>
+              </div>
+          </div>
+          <div>
+              <h3 class="font-bold text-lg mb-4">Navigate</h3>
+              <ul class="space-y-2">
+                  <li><a href="#">ALUMNI</a></li>
+                  <li><a href="#">ATHLETICS</a></li>
+                  <li><a href="#">DIVERSITY</a></li>
+                  <li><a href="#">HEALTH CARE</a></li>
+                  <li><a href="#">LIBRARIES</a></li>
+                  <li><a href="#">ONLINE LEARNING</a></li>
+                  <li><a href="#">PENN GLOBAL</a></li>
+              </ul>
+          </div>
+          <div>
+              <h3 class="font-bold text-lg mb-4">Penn's Heritage</h3>
+              <p class="text-sm">As America's first university, Penn has a history that dates back to 1740 and shares many ties with the colonial city of Philadelphia and the birth of our nation.</p>
+              <a href="#" class="mt-4 inline-block">OUR HISTORY</a>
+          </div>
+      </div>
+
+      <div class="flex justify-between items-center border-t border-gray-500 pt-8">  <div class="text-sm">
+              <a href="#">DISCLAIMER</a> | 
+              <a href="#">EMERGENCY SERVICES</a> | 
+              <a href="#">NONDISCRIMINATION</a> | 
+              <a href="#">PRIVACY POLICY</a>
+          </div>
+          <div class="text-sm">
+              <a href="#">BACK TO TOP</a> | 
+              <a href="#">REPORT ACCESSIBILITY ISSUES AND GET HELP</a> | 
+              <a href="#">REPORT COPYRIGHT INFRINGEMENT</a>
+          </div>
+      </div>
+  </div>
+</footer>
 </body>
 </html>
