--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Announcement Section -->
   <div class="bg-[#00166c] text-white p-8 text-left">
-    <div class="border border-gray-400 rounded p-6">
+    <div class="border border-gray-600 rounded p-8">
       <a href="#" class="block underline hover:no-underline">
         <p class="text-xl md:text-2xl">
           On Friday, February 14, 2025 the University will suspend normal operations for the Eagles victory parade
@@ -39,8 +39,10 @@
           <img src="src/images/UPenn-logo.svg" alt="Penn Logo" class="h-16 w-auto" />
         </a>
         <div class="flex items-center space-x-4">
+          <a href="#" class="pr-4">
+            <img src="src/images/icons8-search-50.png" alt="Search" class="h-5 w-5"> </a>
           <a href="#" class="hover:underline text-sm text-white">RESOURCES</a>
-          <a href="#" class="bg-[#BF0D3E] hover:bg-[#980A2A] text-white font-bold py-1 px-2 rounded text-sm">
+          <a href="#" class="bg-[#940930] hover:bg-[#980A2A] text-white font-bold py-1 px-2 text-md">
             GIVE TO PENN
           </a>
         </div>
@@ -163,7 +165,7 @@
       <div class="flex">
         <div class="w-full md:w-1/2 pr-0 md:pr-8">
           <div class="bg-blue-950 text-white p-8 h-[500px] rounded">
-            <div class="border border-gray-400 rounded p-8">
+            <div class="border border-gray-600 rounded p-8">
               <p class="mb-6 text-center">Campus & Community</p>
               <p class="font-lora text-center text-4xl font-bold mb-4">
                 Penn Center for Innovation celebrates 10 years
@@ -172,7 +174,7 @@
                 The University's nexus for technology transfer supports researchers in their innovative efforts, from CAR T to mRNA advancements that have dramatically reshaped the world.
               </p>
               <div class="flex justify-center">
-                <button class="bg-blue-950 text-white px-6 py-3 rounded-full hover:bg-white hover:text-red-800 border border-gray-400">
+                <button class="bg-blue-950 text-white px-6 py-3 rounded-full hover:bg-white hover:text-red-800 border border-gray-600">
                   Learn More
                 </button>
               </div>
